--- a/Develop/style.css
+++ b/Develop/style.css
@@ -1,9 +1,31 @@
+/* BODY STYLING */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
 }
 
+/* HEADER STYLING */
+.jumbotron {
+  text-align: center;
+  background-color: transparent;
+  color: black;
+  border-radius: 0;
+  border-bottom: 10px solid black;
+}
+
+.row {
+  white-space: pre-wrap;
+  height: 80px;
+  border-top: 1px solid white;
+}
+
+.time-block {
+  text-align: center;
+  border-radius: 15px;
+}
+
+/* HOURLY TEXT AREA STYLING */
 textarea {
   background: transparent;
   border: none;
@@ -13,33 +35,16 @@ textarea {
   padding: 10px;
 }
 
-.jumbotron {
-  text-align: center;
-  background-color: transparent;
-  color: black;
-  border-radius: 0;
-  border-bottom: 10px solid black;
-}
 
-.description {
-  white-space: pre-wrap;
-}
 
-.time-block {
-  text-align: center;
-  border-radius: 15px;
-}
-
-.row {
-  white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;
-}
-
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+div.col-md-1 {
+  background-color: whitesmoke;
+  font-weight: bolder; 
+  border: #d3d3d3;
+  /* border-right: 1px solid black; */
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  padding-top: 10px;
 }
 
 .past {
