--- a/Develop/style.css
+++ b/Develop/style.css
@@ -14,6 +14,8 @@ body {
   border-bottom: 10px solid black;
 }
 
+/* PLANNER SECTION STYLING */
+
 .row {
   white-space: pre-wrap;
   height: 80px;
@@ -25,7 +27,15 @@ body {
   border-radius: 15px;
 }
 
-/* HOURLY TEXT AREA STYLING */
+div.col-md-1 {
+  background-color: whitesmoke;
+  font-weight: bolder; 
+  border: #d3d3d3;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  padding-top: 10px;
+}
+
 textarea {
   background: transparent;
   border: none;
@@ -35,18 +45,7 @@ textarea {
   padding: 10px;
 }
 
-
-
-div.col-md-1 {
-  background-color: whitesmoke;
-  font-weight: bolder; 
-  border: #d3d3d3;
-  /* border-right: 1px solid black; */
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
-  padding-top: 10px;
-}
-
+/* STYLES FOR PAST, PRESENT, AND FUTURE TIMES WITHIN PLANNER */
 .past {
   background-color: #d3d3d3;
   color: white;
@@ -62,6 +61,8 @@ div.col-md-1 {
   color: white;
 }
 
+
+/* SAVE BUTTON STYLING */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
